// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer/components/filters/UserHandleFilter.tsx should render itself & its children with detailed notifications disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <fieldset
        id="filter-user-handles"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
          data-align="baseline"
          data-direction="horizontal"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <legend>
            <div
              class="Box-sc-g0xbh4-0 mb-2"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
                id="handles"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-mention"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8 .5a7.499 7.499 0 0 1 7.499 7.462l.002.038v1.164a2.612 2.612 0 0 1-4.783 1.454A3.763 3.763 0 0 1 8 11.776 3.776 3.776 0 1 1 11.776 8v1.164a1.112 1.112 0 0 0 2.225 0L14 8a6 6 0 1 0-3.311 5.365.75.75 0 0 1 .673 1.341A7.5 7.5 0 1 1 8 .5Zm0 5.225a2.275 2.275 0 1 0 0 4.552 2.275 2.275 0 0 0 0-4.552Z"
                  />
                </svg>
                <h2
                  class="Heading__StyledHeading-sc-1c1dgg0-0 fokFLB"
                  sx="[object Object]"
                >
                  Handles
                </h2>
              </div>
            </div>
          </legend>
          <div
            aria-label="tooltip-filter-handles"
            class="Box-sc-g0xbh4-0 relative"
            data-testid="tooltip-tooltip-filter-handles"
            id="tooltip-filter-handles"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-question text-gitify-tooltip-icon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
          data-align="stretch"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-check-circle-fill text-gitify-icon-open"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm3.78-9.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018L6.75 9.19 5.28 7.72a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l2 2a.75.75 0 0 0 1.06 0Z"
                  />
                </svg>
                <span
                  class="Text-sc-17v1xeu-0 ezOLpc"
                >
                  Include:
                </span>
              </div>
            </div>
            <span
              class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 dOliEx gesWdT"
              disabled=""
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gYTInF"
                display="flex"
                sx="[object Object]"
              >
                <div
                  class="Box-sc-g0xbh4-0 gffXDM"
                  sx="[object Object]"
                >
                  <input
                    aria-invalid="false"
                    class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                    disabled=""
                    sx="[object Object]"
                    title="Include handles"
                    type="text"
                  />
                </div>
              </div>
            </span>
          </div>
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-no-entry-fill text-gitify-icon-closed"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 12 12"
                  width="16"
                >
                  <path
                    d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm3 5H3v2h6Z"
                  />
                </svg>
                <span
                  class="Text-sc-17v1xeu-0 ezOLpc"
                >
                  Exclude:
                </span>
              </div>
            </div>
            <span
              class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 dOliEx gesWdT"
              disabled=""
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gYTInF"
                display="flex"
                sx="[object Object]"
              >
                <div
                  class="Box-sc-g0xbh4-0 gffXDM"
                  sx="[object Object]"
                >
                  <input
                    aria-invalid="false"
                    class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                    disabled=""
                    sx="[object Object]"
                    title="Exclude handles"
                    type="text"
                  />
                </div>
              </div>
            </span>
          </div>
        </div>
      </fieldset>
    </div>
  </body>,
  "container": <div>
    <fieldset
      id="filter-user-handles"
    >
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
        data-align="baseline"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <legend>
          <div
            class="Box-sc-g0xbh4-0 mb-2"
          >
            <div
              class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
              id="handles"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-mention"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 .5a7.499 7.499 0 0 1 7.499 7.462l.002.038v1.164a2.612 2.612 0 0 1-4.783 1.454A3.763 3.763 0 0 1 8 11.776 3.776 3.776 0 1 1 11.776 8v1.164a1.112 1.112 0 0 0 2.225 0L14 8a6 6 0 1 0-3.311 5.365.75.75 0 0 1 .673 1.341A7.5 7.5 0 1 1 8 .5Zm0 5.225a2.275 2.275 0 1 0 0 4.552 2.275 2.275 0 0 0 0-4.552Z"
                />
              </svg>
              <h2
                class="Heading__StyledHeading-sc-1c1dgg0-0 fokFLB"
                sx="[object Object]"
              >
                Handles
              </h2>
            </div>
          </div>
        </legend>
        <div
          aria-label="tooltip-filter-handles"
          class="Box-sc-g0xbh4-0 relative"
          data-testid="tooltip-tooltip-filter-handles"
          id="tooltip-filter-handles"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-question text-gitify-tooltip-icon"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
        data-align="stretch"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
          data-align="center"
          data-direction="horizontal"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
          >
            <div
              class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check-circle-fill text-gitify-icon-open"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm3.78-9.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018L6.75 9.19 5.28 7.72a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l2 2a.75.75 0 0 0 1.06 0Z"
                />
              </svg>
              <span
                class="Text-sc-17v1xeu-0 ezOLpc"
              >
                Include:
              </span>
            </div>
          </div>
          <span
            class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 dOliEx gesWdT"
            disabled=""
            sx="[object Object]"
          >
            <div
              class="Box-sc-g0xbh4-0 gYTInF"
              display="flex"
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gffXDM"
                sx="[object Object]"
              >
                <input
                  aria-invalid="false"
                  class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                  disabled=""
                  sx="[object Object]"
                  title="Include handles"
                  type="text"
                />
              </div>
            </div>
          </span>
        </div>
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
          data-align="center"
          data-direction="horizontal"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
          >
            <div
              class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-no-entry-fill text-gitify-icon-closed"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 12 12"
                width="16"
              >
                <path
                  d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm3 5H3v2h6Z"
                />
              </svg>
              <span
                class="Text-sc-17v1xeu-0 ezOLpc"
              >
                Exclude:
              </span>
            </div>
          </div>
          <span
            class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 dOliEx gesWdT"
            disabled=""
            sx="[object Object]"
          >
            <div
              class="Box-sc-g0xbh4-0 gYTInF"
              display="flex"
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gffXDM"
                sx="[object Object]"
              >
                <input
                  aria-invalid="false"
                  class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                  disabled=""
                  sx="[object Object]"
                  title="Exclude handles"
                  type="text"
                />
              </div>
            </div>
          </span>
        </div>
      </div>
    </fieldset>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/filters/UserHandleFilter.tsx should render itself & its children with detailed notifications enabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <fieldset
        id="filter-user-handles"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
          data-align="baseline"
          data-direction="horizontal"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <legend>
            <div
              class="Box-sc-g0xbh4-0 mb-2"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
                id="handles"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-mention"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8 .5a7.499 7.499 0 0 1 7.499 7.462l.002.038v1.164a2.612 2.612 0 0 1-4.783 1.454A3.763 3.763 0 0 1 8 11.776 3.776 3.776 0 1 1 11.776 8v1.164a1.112 1.112 0 0 0 2.225 0L14 8a6 6 0 1 0-3.311 5.365.75.75 0 0 1 .673 1.341A7.5 7.5 0 1 1 8 .5Zm0 5.225a2.275 2.275 0 1 0 0 4.552 2.275 2.275 0 0 0 0-4.552Z"
                  />
                </svg>
                <h2
                  class="Heading__StyledHeading-sc-1c1dgg0-0 fokFLB"
                  sx="[object Object]"
                >
                  Handles
                </h2>
              </div>
            </div>
          </legend>
          <div
            aria-label="tooltip-filter-handles"
            class="Box-sc-g0xbh4-0 relative"
            data-testid="tooltip-tooltip-filter-handles"
            id="tooltip-filter-handles"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-question text-gitify-tooltip-icon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
          data-align="stretch"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-check-circle-fill text-gitify-icon-open"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm3.78-9.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018L6.75 9.19 5.28 7.72a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l2 2a.75.75 0 0 0 1.06 0Z"
                  />
                </svg>
                <span
                  class="Text-sc-17v1xeu-0 ezOLpc"
                >
                  Include:
                </span>
              </div>
            </div>
            <span
              class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 khKVBN gesWdT"
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gYTInF"
                display="flex"
                sx="[object Object]"
              >
                <div
                  class="Box-sc-g0xbh4-0 gffXDM"
                  sx="[object Object]"
                >
                  <input
                    aria-invalid="false"
                    class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                    sx="[object Object]"
                    tabindex="0"
                    title="Include handles"
                    type="text"
                  />
                </div>
              </div>
            </span>
          </div>
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-no-entry-fill text-gitify-icon-closed"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 12 12"
                  width="16"
                >
                  <path
                    d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm3 5H3v2h6Z"
                  />
                </svg>
                <span
                  class="Text-sc-17v1xeu-0 ezOLpc"
                >
                  Exclude:
                </span>
              </div>
            </div>
            <span
              class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 khKVBN gesWdT"
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gYTInF"
                display="flex"
                sx="[object Object]"
              >
                <div
                  class="Box-sc-g0xbh4-0 gffXDM"
                  sx="[object Object]"
                >
                  <input
                    aria-invalid="false"
                    class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                    sx="[object Object]"
                    tabindex="0"
                    title="Exclude handles"
                    type="text"
                  />
                </div>
              </div>
            </span>
          </div>
        </div>
      </fieldset>
    </div>
  </body>,
  "container": <div>
    <fieldset
      id="filter-user-handles"
    >
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
        data-align="baseline"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <legend>
          <div
            class="Box-sc-g0xbh4-0 mb-2"
          >
            <div
              class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
              id="handles"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-mention"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 .5a7.499 7.499 0 0 1 7.499 7.462l.002.038v1.164a2.612 2.612 0 0 1-4.783 1.454A3.763 3.763 0 0 1 8 11.776 3.776 3.776 0 1 1 11.776 8v1.164a1.112 1.112 0 0 0 2.225 0L14 8a6 6 0 1 0-3.311 5.365.75.75 0 0 1 .673 1.341A7.5 7.5 0 1 1 8 .5Zm0 5.225a2.275 2.275 0 1 0 0 4.552 2.275 2.275 0 0 0 0-4.552Z"
                />
              </svg>
              <h2
                class="Heading__StyledHeading-sc-1c1dgg0-0 fokFLB"
                sx="[object Object]"
              >
                Handles
              </h2>
            </div>
          </div>
        </legend>
        <div
          aria-label="tooltip-filter-handles"
          class="Box-sc-g0xbh4-0 relative"
          data-testid="tooltip-tooltip-filter-handles"
          id="tooltip-filter-handles"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-question text-gitify-tooltip-icon"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
        data-align="stretch"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
          data-align="center"
          data-direction="horizontal"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
          >
            <div
              class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check-circle-fill text-gitify-icon-open"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm3.78-9.72a.751.751 0 0 0-.018-1.042.751.751 0 0 0-1.042-.018L6.75 9.19 5.28 7.72a.751.751 0 0 0-1.042.018.751.751 0 0 0-.018 1.042l2 2a.75.75 0 0 0 1.06 0Z"
                />
              </svg>
              <span
                class="Text-sc-17v1xeu-0 ezOLpc"
              >
                Include:
              </span>
            </div>
          </div>
          <span
            class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 khKVBN gesWdT"
            sx="[object Object]"
          >
            <div
              class="Box-sc-g0xbh4-0 gYTInF"
              display="flex"
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gffXDM"
                sx="[object Object]"
              >
                <input
                  aria-invalid="false"
                  class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                  sx="[object Object]"
                  tabindex="0"
                  title="Include handles"
                  type="text"
                />
              </div>
            </div>
          </span>
        </div>
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ text-sm"
          data-align="center"
          data-direction="horizontal"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 font-medium text-gitify-font w-28"
          >
            <div
              class="Stack__StyledStack-sc-x3xa2i-0 kzRZTJ"
              data-align="center"
              data-direction="horizontal"
              data-gap="condensed"
              data-justify="start"
              data-padding="none"
              data-wrap="nowrap"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-no-entry-fill text-gitify-icon-closed"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 12 12"
                width="16"
              >
                <path
                  d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm3 5H3v2h6Z"
                />
              </svg>
              <span
                class="Text-sc-17v1xeu-0 ezOLpc"
              >
                Exclude:
              </span>
            </div>
          </div>
          <span
            class="TextInputWrapper__TextInputBaseWrapper-sc-1mqhpbi-0 TextInputWrapper-sc-1mqhpbi-1 khKVBN gesWdT"
            sx="[object Object]"
          >
            <div
              class="Box-sc-g0xbh4-0 gYTInF"
              display="flex"
              sx="[object Object]"
            >
              <div
                class="Box-sc-g0xbh4-0 gffXDM"
                sx="[object Object]"
              >
                <input
                  aria-invalid="false"
                  class="UnstyledTextInput-sc-14ypya-0 iVOvhD"
                  sx="[object Object]"
                  tabindex="0"
                  title="Exclude handles"
                  type="text"
                />
              </div>
            </div>
          </span>
        </div>
      </div>
    </fieldset>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
